crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create unique index collation_index_key on insertconflicttest(key, fruit collate \"C\");"
---
IndexStmt@0..86
  Create@0..6 "create"
  Whitespace@6..7 " "
  Unique@7..13 "unique"
  Whitespace@13..14 " "
  Index@14..19 "index"
  Whitespace@19..20 " "
  Ident@20..39 "collation_index_key"
  Whitespace@39..40 " "
  On@40..42 "on"
  Whitespace@42..43 " "
  RangeVar@43..61
    Ident@43..61 "insertconflicttest"
  Ascii40@61..62 "("
  IndexElem@62..65
    Key@62..65 "key"
  Ascii44@65..66 ","
  Whitespace@66..67 " "
  IndexElem@67..84
    Ident@67..72 "fruit"
    Whitespace@72..73 " "
    Collate@73..80 "collate"
    Whitespace@80..81 " "
    Ident@81..84 "\"C\""
  Ascii41@84..85 ")"
  Ascii59@85..86 ";"

