crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@4.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create unique index both_index_key on insertconflicttest(key, fruit collate \"C\" text_pattern_ops);"
---
IndexStmt@0..98
  Create@0..6 "create"
  Whitespace@6..7 " "
  Unique@7..13 "unique"
  Whitespace@13..14 " "
  Index@14..19 "index"
  Whitespace@19..20 " "
  Ident@20..34 "both_index_key"
  Whitespace@34..35 " "
  On@35..37 "on"
  Whitespace@37..38 " "
  RangeVar@38..56
    Ident@38..56 "insertconflicttest"
  Ascii40@56..57 "("
  IndexElem@57..60
    Key@57..60 "key"
  Ascii44@60..61 ","
  Whitespace@61..62 " "
  IndexElem@62..96
    Ident@62..67 "fruit"
    Whitespace@67..68 " "
    Collate@68..75 "collate"
    Whitespace@75..76 " "
    Ident@76..79 "\"C\""
    Whitespace@79..80 " "
    Ident@80..96 "text_pattern_ops"
  Ascii41@96..97 ")"
  Ascii59@97..98 ";"

