crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create unique index both_index_expr_key on insertconflicttest(key, lower(fruit) collate \"C\" text_pattern_ops);"
---
IndexStmt@0..110
  Create@0..6 "create"
  Whitespace@6..7 " "
  Unique@7..13 "unique"
  Whitespace@13..14 " "
  Index@14..19 "index"
  Whitespace@19..20 " "
  Ident@20..39 "both_index_expr_key"
  Whitespace@39..40 " "
  On@40..42 "on"
  Whitespace@42..43 " "
  RangeVar@43..61
    Ident@43..61 "insertconflicttest"
  Ascii40@61..62 "("
  IndexElem@62..65
    Key@62..65 "key"
  Ascii44@65..66 ","
  Whitespace@66..67 " "
  IndexElem@67..108
    FuncCall@67..78
      Ident@67..72 "lower"
      Ascii40@72..73 "("
      ColumnRef@73..78
        Ident@73..78 "fruit"
    Ascii41@78..79 ")"
    Whitespace@79..80 " "
    Collate@80..87 "collate"
    Whitespace@87..88 " "
    Ident@88..91 "\"C\""
    Whitespace@91..92 " "
    Ident@92..108 "text_pattern_ops"
  Ascii41@108..109 ")"
  Ascii59@109..110 ";"

