crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@81.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create unique index fruit_index on insertconflicttest(fruit);
---
IndexStmt@0..61
  Create@0..6 "create"
  Whitespace@6..7 " "
  Unique@7..13 "unique"
  Whitespace@13..14 " "
  Index@14..19 "index"
  Whitespace@19..20 " "
  Ident@20..31 "fruit_index"
  Whitespace@31..32 " "
  On@32..34 "on"
  Whitespace@34..35 " "
  RangeVar@35..53
    Ident@35..53 "insertconflicttest"
  Ascii40@53..54 "("
  IndexElem@54..59
    Ident@54..59 "fruit"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

