crates/pg_syntax/tests/snapshots/postgres_regress/int2@10.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM INT2_TBL AS f(a, b);"
---
SelectStmt@0..34
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..32
    Ident@14..22 "INT2_TBL"
    Whitespace@22..23 " "
    Alias@23..32
      As@23..25 "AS"
      Whitespace@25..26 " "
      Ident@26..27 "f"
      Ascii40@27..28 "("
      Ident@28..29 "a"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      Ident@31..32 "b"
  Ascii41@32..33 ")"
  Ascii59@33..34 ";"

