crates/pg_syntax/tests/snapshots/postgres_regress/int2@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO INT2_TBL(f1) VALUES ('100000');"
---
InsertStmt@0..43
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "INT2_TBL"
  Ascii40@20..21 "("
  ResTarget@21..23
    Ident@21..23 "f1"
  Ascii41@23..24 ")"
  Whitespace@24..25 " "
  SelectStmt@25..41
    Values@25..31 "VALUES"
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..41
      AConst@33..41
        Sconst@33..41 "'100000'"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

